Overflow bug part 11

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body {
   background: #fff;
   font-size: small; /* Define all font sizes relatively */
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
